changes in services

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
+   <div class="img">
+    <img src="./assets/img/mdr back.png" class="back"/>
+    <img src="./assets/img/mdr .png" class="forent"/>
+   </div>
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
       <h1>Muhammad Dawood Rafique</h1>
       <h2>I'm a Professional Web Developer from PAKISTAN</h2>
