--- a/job_dashboard.html
+++ b/job_dashboard.html
@@ -26,13 +26,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: Kelly - v4.1.0
-  * Template URL: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -50,15 +43,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/siraas.png" alt="">
+                  <img src="assets/img/portfolio/job3.png" alt="">
                 </div>
 <!-- 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/white02.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-6.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/white03.jpg" alt="">
+                  <img src="assets/img/portfolio/price-1.jpg" alt="">
                 </div> -->
 
               </div>
@@ -70,28 +63,28 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: SIRAAS Company</li>
-                <li><strong>Project date</strong>: 01 March, 2021</li>
-                <li><strong>Project URL</strong>: <a href="https://www.siraas.com/" target="_blank">www.sariaas.com</a></li>
+                <li><strong>Category</strong>: Web design & development</li>
+                <li><strong>Client</strong>: Cut Out Barber shop</li>
+                <li><strong>Project date</strong>: 01 April, 2021</li>
                 <li><strong>Client Review on Project</strong>: <a href="https://www.upwork.com/o/profiles/users/~0151fda757878278d0/"
                     target="_blank">www.Upwork.com</a></li>
                 <li><strong></strong>: </li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>This is an portfolio detail</h2>
               <p>
-                This is a company site I Made. Company name SIRaaS work's to combine retailer and shoppers on one page. I made it fully
-                responsive for all devices. They want to build a good and professional designed based website which is having options to
-                compatible with extra-large screens.
+                My role for this site is to design the whole layout of the website with full responsiveness at all the devices.
+                The main task for this project is to develop the job dashboard and to make it responsive. The company wants only design
+                and static pages with sample text because they have to convert into the Japanese language.
+                But I try to do my best for making the site responsive and easy useable dashboard.
               </p>
 
               <h2>Web Design Deliverables</h2>
               <p>Mockup, Website Design</p>
               
               <h2>Web Design Skills</h2>
-              <p>Interaction Design, Website Development and Responsive Design</p>
+              <p>Interaction Design, Website Development, SEO and Responsive Design</p>
               
               <h2>UX/UI Design Software</h2>
               <p>Figma</p>
