--- a/contact.html
+++ b/contact.html
@@ -27,12 +27,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Kelly - v4.1.0
-  * Template URL: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body style="background-color: rgb(223, 222, 222);">
@@ -48,7 +42,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="resume.html">Resume</a></li>
+          <!-- <li><a href="resume.html">Resume</a></li> -->
           <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a class="active" href="contact.html">Contact</a></li>
@@ -96,13 +90,13 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>mdawoodrafique394@gmail.com</p>
+                <p><a href="mailto:mdawoodrafique394@gmail.com?subject=Important!&body=Hi."  target="_blank" rel="noopener noreferrer">mdawoodrafique394@gmail.com</a></p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+92 3496840471</p>
+                <p><a href="tel:03496840471">+92 3496840471</a></p>
               </div>
 
             </div>
