--- a/ramzan-detail.html
+++ b/ramzan-detail.html
@@ -44,16 +44,16 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/1.png" alt="">
+                  <img src="assets/img/portfolio/ramadan1.png" alt="">
                 </div>
 
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                   <img src="assets/img/portfolio/2.png.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/3.png" alt="">
-                </div>
+                </div> -->
 
               </div>
               <div class="swiper-pagination"></div>
@@ -67,7 +67,10 @@
                 <li><strong>Category</strong>: Web design & development</li>
                 <li><strong>Client</strong>: Charity Organization</li>
                 <li><strong>Project date</strong>: 01 May, 2021</li>
-                <li><strong>Project URL</strong>: <a href="https://mdr394.github.io/ramadan/">www.ramadan.com</a></li>
+                <li><strong>Project URL</strong>: <a href="https://mdr394.github.io/ramadan/" target="_blank">www.ramadan.com</a></li>
+                <li><strong>Client Review on Project</strong>: <a href="https://www.upwork.com/o/profiles/users/~0151fda757878278d0/"
+                    target="_blank">www.Upwork.com</a></li>
+                <li><strong></strong>: </li>
               </ul>
             </div>
             <div class="portfolio-description">
